6.03-Agent-core-agentRuntime/k8s/mcp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-server
  namespace: mcp-agent-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-server
  template:
    metadata:
      labels:
        app: mcp-server
    spec:
      serviceAccountName: mcp-sa
      containers:
      - name: mcp-server
        image: umesh1212/bedrock-agent:v1
        ports:
        - containerPort: 8000
