6.03-Agent-core-agentRuntime/k8s/mcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-agent-ai
  namespace: mcp-agent-ai
spec:
  type: ClusterIP
  selector:
    app: mcp-server
  ports:
    - port: 80
      targetPort: 8000
